tests/machine/x/scala/group_by.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by.scala:10: error: value city is not a member of scala.collection.immutable.Map[String,Any]
    val stats = ((for { person <- people } yield (person.city, person)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("city" -> g.key, "count" -> (g).size, "avg_age" -> (for { p <- g } yield p.age).sum.toDouble / (for { p <- g } yield p.age).size) }.toList
                                                         ^
/workspace/mochi/tests/machine/x/scala/group_by.scala:10: error: value map is not a member of Any
    val stats = ((for { person <- people } yield (person.city, person)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("city" -> g.key, "count" -> (g).size, "avg_age" -> (for { p <- g } yield p.age).sum.toDouble / (for { p <- g } yield p.age).size) }.toList
                                                                                                                          ^
two errors found
